--- a/css/styles.css
+++ b/css/styles.css
@@ -1,11 +1,11 @@
-@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400;600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&amp;display=swap');
 
 :root {
     --secondary-color: #5b7ceb;
 }
 
 * {
-    font-family: 'Nunito', sans-serif;
+    font-family: Roboto,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
     margin: 0;
     padding: 0;
     box-sizing: border-box;
